--- a/views/about.ejs
+++ b/views/about.ejs
@@ -40,7 +40,7 @@
         <div class="about-image slide-in-right">
           <div class="glass-card">
             <img src="/images/LOGO.png" alt="HOTS Competition" class="about-logo">
-            <div class="image-caption">Higher Order Thinkers: Cultivating Scientific Excellence Since 2020</div>
+            <div class="image-caption">Higher Order Thinking Skills: Cultivating Scientific Excellence Since 2020</div>
           </div>
         </div>
       </div>
