--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header', {title: 'HOTS: Siege of Shadows | Higher Order Thinkers', path: '/'}) %>
+<%- include('partials/header', {title: 'HOTS: Siege of Shadows | Higher Order Thinking Skills', path: '/'}) %>
 
   <!-- Hero Section -->
   <section class="hero">
